--- a/css/main.css
+++ b/css/main.css
@@ -7,18 +7,27 @@ html, body {
   color: white;
 }
 
-body {
+a {
+  text-decoration: none
+}
+
+#main-container, #second-page, #third-page, #forth-page, #contacts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+#main-container {
   background: #232526; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #232526 , #414345); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #232526 , #414345); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-#main-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+#second-page, #third-page, #forth-page, #contacts {
+  background-color: #fff;
+  color: black;
 }
 
 #logo {
@@ -26,14 +35,103 @@ body {
   height: auto;
 }
 
-#container {
+.container {
   text-align: center;
+}
+
+#links a {
+  font-size: 50px;
+  color: black;
+  margin: 3px;
+}
+
+#links a:hover {
+  color: #414345;
+
+  -webkit-transition: .3s ease-in-out;
+  -moz-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
 }
 
 #c-soon {
   font-size: 18px;
 }
 
+#menu {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  margin: 40px;
+  width: 40px;
+  height: 27px;
+  cursor: pointer;
+
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+#menu span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  background: white;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#menu-span1 {
+  top: 0px;
+}
+
+#menu-span2 {
+  top: 12px;
+}
+
+#menu-span3 {
+  top: 24px;
+}
+
+#menu.open #menu-span1 {
+  top: 12px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+  background: red;
+}
+
+#menu.open #menu-span2 {
+  opacity: 0;
+  left: -40px;
+  background: red;
+}
+
+#menu.open #menu-span3 {
+  top: 12px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  background: red;
+}
 
 #coded-with-love  {
   position: absolute;
